# unlearning-compression

./: .gitignore  .gitmodules  LAB_NOTEBOOK.md  README.md  pyproject.toml
assets/: hf_model_card_8b.md
calibration/: 1b_graddiff_alpha1.pt
experiments/: calibrate_activations.py  eval_compressed.py  weight_delta_analysis.py
results/1b_full_model_ceiling/: summary.csv
results/1b_graddiff_alpha1_asvd_70pct/: summary.csv
results/1b_graddiff_alpha1_asvd_80pct/: summary.csv
results/1b_graddiff_alpha1_asvd_90pct/: summary.csv
results/1b_graddiff_alpha1_prune_10pct/: summary.csv
results/1b_retain90_baseline/: summary.csv
results/1b_retain90_svdchol_70pct/: summary.csv
results/1b_retain90_svdchol_80pct/: summary.csv
results/1b_retain90_svdchol_90pct/: summary.csv
results/1b_simnpo_prune_10pct/: summary.csv
results/1b_simnpo_prune_30pct/: summary.csv
results/8b_full_model_ceiling/: summary.csv
results/8b_graddiff_alpha1_baseline/: summary.csv
results/8b_graddiff_alpha1_prune_10pct/: summary.csv
scripts/: bootstrap.sh  eval_8b.sh  launch_and_run.py  resume_8b.sh  resume_after_calibration_crash.sh  resume_asvd_then_b.sh  run_sweep.sh  session_a.sh  session_b.sh  session_c.sh  session_start.sh  setup_volume.sh  train_8b.sh  train_8b_simnpo.sh  validate_svd_cholesky.sh
sweeps/: 2026-04-23-8b.sh  2026-04-23-followup.sh  2026-04-23-pruning-svd.sh  2026-04-23-quantize.sh  2026-04-24-8b-pruning-svd.sh  2026-04-25-1b-asvd.sh  2026-04-25-1b-simnpo-pruning.sh  2026-04-25-8b-asvd.sh  2026-04-25-8b-simnpo.sh  2026-04-28-svd-chol-baseline.sh
(+44 files in other folders)
