[project]
name = "unlearning-compression"
version = "0.1.0"
description = "Does compression reverse machine unlearning?"
requires-python = ">=3.10"
dependencies = [
    "torch==2.4.1",
    "transformers==4.51.3",
    "datasets==3.0.1",
    "accelerate==0.34.2",
    "bitsandbytes==0.44.1",
    "huggingface-hub==0.36.0",
    "numpy==2.2.3",
    "scipy==1.14.1",
    "scikit-learn==1.5.2",
    "rouge-score==0.1.2",
    "wandb==0.21.4",
    "hydra-core==1.3",
    "hydra_colorlog==1.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/compress"]
